- Booking list page & remarks view refinements - Party "Save as Draft" based reload related changes in all tabs - Party GST Validation enforcement - Popup overlay styling CSS  Changes to be committed: 	modified:   .env.production 	modified:   src/App.js 	modified:   src/FFS/masters/PartyMaster/PartyAddressEdit.js 	modified:   src/FFS/masters/PartyMaster/PartyCommunication.js 	modified:   src/FFS/masters/PartyMaster/PartyMaster.js 	modified:   src/FFS/masters/PartyMaster/PartySalesMap.js 	modified:   src/FFS/masters/PartyMaster/RebateParty.js 	modified:   src/FFS/transactions/Booking/Booking.js 	modified:   src/FFS/transactions/Booking/BookingList.js 	modified:   src/FFS/transactions/Booking/BookingSummary.js 	modified:   src/FFS/transactions/Booking/GeneralInformationTab.js 	modified:   src/FireQube/masters/MasterListPageCx.jsx 	modified:   src/FireQube/widgets/EditPageLayout.js 	modified:   src/FireQube/widgets/ListPageLayout.js 	modified:   src/FireQube/widgets/TopbarNav.jsx 	modified:   src/FireQube/widgets/TransactionListPageLayout.js 	modified:   src/index.js 	modified:   src/shared/styles/dx-styles.css

--- a/.env.production
+++ b/.env.production
@@ -2,8 +2,8 @@ REACT_APP_AES_CIPHER_KEY=8182838485868788
 
 #noble server api
 #REACT_APP_API_URL=http://103.120.179.46:90/api/
+#REACT_APP_ENVIRONMENT=Noble UAT
 
 #dev server api
 REACT_APP_API_URL=http://103.120.176.146:90/api/
-
-REACT_APP_ENVIRONMENT=Production
+REACT_APP_ENVIRONMENT=TVIO Test
