--- a/.env.production
+++ b/.env.production
@@ -7,3 +7,7 @@ REACT_APP_AES_CIPHER_KEY=8182838485868788
 #dev server api
 REACT_APP_API_URL=http://103.120.176.146:90/api/
 REACT_APP_ENVIRONMENT=TVIO Test
+
+#satish server api
+#REACT_APP_API_URL=http://localhost:5036/api/
+#REACT_APP_ENVIRONMENT=Satish Dev 
